# loadtest-dns

./: .gitignore  README.md  analyze-uv.sh  analyze.sh  test-your-domain.sh
analyzer/: README.md  pyproject.toml
analyzer-results/: 1000qps-10min.json  14000qps-30min-dns_metrics_20250605_024309.json  19000qps-30min-dns_metrics_20250606_031430.json  2000qps-10min-dns_metrics_20250602_154630.json  3000qps-10min-dns_metrics_20250602_160337.json  3000qps-30min-dns_metrics_20250602_170644.json  3000qps-30min-dns_metrics_20250603_102902.json  5000qps-30min-dns_metrics_20250603_112812.json  6000qps-30min-dns_analysis_20250603_120333.pngdns_metrics_20250603_120333.json  9000qps-30min-dns_metrics_20250604_033134.json  dns_metrics_20250528_212438.json
analyzer/dns_analyzer/: analyze_results.py
analyzer/results/: dns_metrics_20250528_210311.json
configs/: basic-test.conf  custom-test.conf  stress-test.conf
queries/: basic-queries.txt  custom-queries.txt  mixed-queries.txt
results/: basic_test_20250528_175311.txt  dns_metrics_20250528_175621.json  dns_metrics_20250528_204546.json  dns_metrics_20250528_204556.json  dns_metrics_20250528_204800.json  latest-basic-test.txt
scripts/: analyze-results.py  analyze-uv.sh  run-basic-test.sh  run-custom-test.sh  run-stress-test.sh
