[project]
name = "dns-analyzer"
version = "0.1.0"
description = "DNS Performance Test Results Analyzer - Analyzes dnsperf output and generates visualizations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
]

[project.scripts]
dns-analyzer = "dns_analyzer.analyze_results:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
